--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "express-handlebars": "^5.1.0",
     "hbs": "^4.1.1",
     "html": "^1.0.0",
-    "http-errors": "~1.6.3",
+    "http-errors": "^1.6.3",
     "jade": "~1.11.0",
     "morgan": "~1.9.1"
   }
